make things look better on mobile; fix title alignment; change gwen's website link

--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,6 @@ a:hover {
   line-height: 1.5;
   font-size: 3rem;
   font-weight: normal;
-  text-align: center;
 }
 
 h3 {
@@ -169,11 +168,11 @@ code {
 }
 
 .card {
-  margin: 0.3rem 0.3rem 0.3rem 0.3rem;
+  margin: 0.2rem 0.0rem 0.2rem 0.2rem;
   padding: 1rem;
-  width: 90%;
+  width: 100% - 2rem;
   text-align: left;
-  border-radius: 20px;
+  border-radius: 0.5rem;
   border: 2px solid transparent;
   transition: all 0.2s linear;
 }
@@ -181,7 +180,7 @@ code {
 .card:hover {
   color: var(--nord-frost2);
   background-color: var(--nord-dark0);
-  border: 2px solid var(--nord-dark3);
+  /* border: 2px solid var(--nord-dark3); */
   box-shadow: 0px 4px 25px 5px rgba(0, 0, 0, 0.2);
 }
 
@@ -220,4 +219,16 @@ hr {
   width: 90%;
   color: #4c566a;
   background-color: #4c566a;
+}
+
+@media (max-width: 800px) {
+  .column {
+    margin: -0.3rem;
+    padding: 0.2rem;
+    flex-basis: 60%;
+  }
+  .card {
+    margin: 0;
+    transition: none;
+  }
 }
